# titan

./: .replit  plan.md  task.md
.github/workflows/: docker-test.yml
apps/api/: alembic.ini  main.py  pyproject.toml
apps/api/migrations/versions/: 0001_create_scan_jobs.py
apps/web/public/legal/: third-party.html
services/titan-worker/: Dockerfile.titan-worker  runner.sh
