[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}


[tool.poetry.group.dev.dependencies]
alembic = "^1.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
